rsfg/tests/scripts/error/unknown-ident.sfg
fn main()
	var x = y
	var rec = 2

